--- a/package.json
+++ b/package.json
@@ -22,5 +22,14 @@
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.7"
+    },
+    "dependencies": {
+        "apollo-cache-inmemory": "^1.4.3",
+        "apollo-client": "^2.4.13",
+        "apollo-link": "^1.2.8",
+        "apollo-link-http": "^1.5.11",
+        "graphql": "^14.1.1",
+        "graphql-tag": "^2.10.1",
+        "vue-apollo": "^3.0.0-beta.28"
     }
 }
